[gd_scene load_steps=17 format=2]

[ext_resource path="res://Scenes/TitleScreen/TitleScreen.gd" type="Script" id=1]
[ext_resource path="res://Fonts/GravityBold8.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Scenes/MainLevel/Background/BackgroundCanvasLayer.tscn" type="PackedScene" id=3]
[ext_resource path="res://Sprites/HUD/ButtonPressed copy.png" type="Texture" id=4]
[ext_resource path="res://Sprites/HUD/ButtonPressed.png" type="Texture" id=5]
[ext_resource path="res://Sprites/HUD/Button.png" type="Texture" id=6]
[ext_resource path="res://SelectiveGlowWorldEnvironment.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/Characters/Base/Base.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/TitleScreen/YSort.gd" type="Script" id=9]
[ext_resource path="res://Scenes/Camera/Camera2D.tscn" type="PackedScene" id=10]

[sub_resource type="DynamicFont" id=1]
outline_size = 2
outline_color = Color( 0.466667, 0.294118, 0.960784, 1 )
use_mipmaps = true
extra_spacing_bottom = 7
extra_spacing_char = 1
extra_spacing_space = -2
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 42, 26 )
modulate_color = Color( 1.14, 1.1, 1.15, 1 )

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 40, 24 )

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 42, 26 )
modulate_color = Color( 1.1, 1, 1.3, 1 )

[sub_resource type="StyleBoxTexture" id=5]
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 42, 26 )

[sub_resource type="DynamicFont" id=6]
outline_size = 2
outline_color = Color( 0.466667, 0.294118, 0.960784, 1 )
font_data = ExtResource( 2 )

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.203766
margin_right = 0.203766
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SelectiveGlowWorldEnvironment" parent="." instance=ExtResource( 7 )]

[node name="AnimTween" type="Tween" parent="."]

[node name="TitleLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -106.0
margin_top = 66.1211
margin_right = 106.0
margin_bottom = 84.1211
rect_scale = Vector2( 1.5, 1.5 )
rect_pivot_offset = Vector2( 106, 9 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_outline_modulate = Color( 1.1, 1, 1.3, 1 )
custom_colors/font_color_shadow = Color( 0.282353, 0.266667, 0.341176, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 0
text = "Lunar Bastion"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeToBeatLabel" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = -94.0
margin_top = 8.0
margin_right = 94.0
margin_bottom = 57.0
grow_horizontal = 2
grow_vertical = 2
rect_scale = Vector2( 0.6, 0.6 )
rect_pivot_offset = Vector2( 94, 8 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_outline_modulate = Color( 1.1, 1, 1.3, 1 )
custom_colors/font_color_shadow = Color( 0.282353, 0.266667, 0.341176, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 0
text = "Time to beat
0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Camera2D" parent="." instance=ExtResource( 10 )]

[node name="BackgroundCanvasLayer" parent="." instance=ExtResource( 3 )]

[node name="Earth" parent="BackgroundCanvasLayer" index="1"]
position = Vector2( 404.743, 110.035 )
scale = Vector2( 1.5, 1.5 )

[node name="Moon" parent="BackgroundCanvasLayer" index="2"]
position = Vector2( -72.0315, 17.8658 )
scale = Vector2( 1.5, 1.5 )

[node name="YSort" type="YSort" parent="."]
z_index = -1
script = ExtResource( 9 )

[node name="Timer" type="Timer" parent="YSort"]
process_mode = 0
wait_time = 1.3
one_shot = true
autostart = true

[node name="Base" parent="YSort" instance=ExtResource( 8 )]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 241.651, 141.676 )
scale = Vector2( 1.5, 1.5 )

[node name="PlayButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -38.5
margin_top = -15.0
margin_right = 42.5
margin_bottom = 19.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1.05, 1, 1.1, 1 )
shortcut_in_tooltip = false
text = "Play"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="tween_all_completed" from="AnimTween" to="." method="_on_AnimTween_tween_all_completed"]
[connection signal="timer_yielding" from="YSort" to="." method="_on_YSort_timer_yielding"]
[connection signal="timeout" from="YSort/Timer" to="YSort" method="_on_Timer_timeout"]
[connection signal="mouse_entered" from="PlayButton" to="." method="_on_PlayButton_mouse_entered"]
[connection signal="pressed" from="PlayButton" to="YSort" method="_on_PlayButton_pressed"]
[connection signal="pressed" from="PlayButton" to="." method="_on_PlayButton_pressed"]

[editable path="BackgroundCanvasLayer"]
